# ecommerce-web-scraper

./: .gitignore  README.md  config.md  pyproject.toml  todo.txt
crawlers/: base.py  run_scraper.py
crawlers/stores/lululemon/scripts/: config.py  pipeline.py
crawlers/stores/macys/scripts/: config.py  pipeline.py
crawlers/stores/nordstrom/scripts/: config.py  pipeline.py
crawlers/stores/quince/scripts/: config.py  pipeline.py
example_output/: macys.json  macys_20250124_151001.json  nordstrom.json  nordstrom_20250124_152106.json  quince.json  quince_20250124_150500.json
utils/: logger.py
