[project]
name = "crawler-project"
version = "0.1.0"
description = "Web scraper for e-commerce sites"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.1",
    "selenium>=4.28.0",
    "webdriver-manager>=4.0.2",
]

[tool.ruff]
line-length = 120
target-version = "py312"
